remove height attribute to fix alignment (https://github.com/woocommerce/woocommerce-admin/pull/3141)

--- a/plugins/woocommerce-admin/packages/components/src/ellipsis-menu/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/ellipsis-menu/style.scss
@@ -4,7 +4,6 @@
 }
 
 .woocommerce-ellipsis-menu__toggle {
-	height: 24px;
 	justify-content: center;
 	vertical-align: middle;
 	width: 24px;
